# perf-test-agent-v2

./: .dockerignore  .tmp_regen_html_local.js  Dockerfile  LICENSE  Makefile  PR_VALIDATION_REPORT.md  perf_test_dashboard.html  perf_test_dashboard.jsx  regen_dashboard_html.js
perf-test-agent/: .env.example  Makefile  README.md  pyproject.toml
perf-test-agent/config/: perf_environment_reference.yaml
perf-test-agent/config/environment_references/: manifest.yaml
perf-test-agent/scripts/: run_local.sh
perf-test-agent/snowflake/: ddl_complete.sql
perf-test-agent/src/: __init__.py  pipeline.py  runtime.py
perf-test-agent/src/agents/: base_agent.py  env_config_checker.py  execution_orchestrator.py  postmortem_agent.py  results_analyzer.py  script_generator.py  story_analyzer.py  test_plan_generator.py
perf-test-agent/src/api/: __main__.py  main.py
perf-test-agent/src/config/: settings.py
perf-test-agent/src/integrations/: auxiliary_clients.py  azure_openai.py  dynatrace_client.py  jira_client.py  lre_client.py  rag_retriever.py  snowflake_client.py
perf-test-agent/src/models/: analysis.py  env_config.py  execution.py  pipeline_state.py  script_gen.py  test_case.py  test_plan.py
perf-test-agent/src/perf_test_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
perf-test-agent/src/prompts/: __init__.py  global_system_context.txt  phase1_story_analyzer.txt  phase1_story_analyzer_evaluator.txt  phase2_test_plan_generator.txt  phase3_env_config_checker.txt  phase4_script_generator.txt  (+4 more)
perf-test-agent/tests/: test_health.py  test_results_analyzer_optimizer.py  test_runtime.py  test_story_analyzer_optimizer.py
(+57 files in other folders)
